# demo-blob-app

./: .gitignore  README.md
app/: package.json  pnpm-lock.yaml  vite.config.js
app/src/: App.tsx
app/src/api/: chatApi.ts
app/src/pages/: ChatPage.tsx
logic/: Cargo.toml  build.sh
logic/res/: chat_app.wasm
logic/src/: lib.rs
